kustomizations/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  selector:
    app: database
  ports:
    - port: 18084
      targetPort: 18084
